[project]
name = "llm-training-memory-ladder"
version = "0.1.0"
description = "Pure-Python memory estimators for LLM training parallelism strategies."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9",
    "pandas>=2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_ladder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
